--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,3 +34,4 @@ jobs:
           filters:
             branches:
               only: main # only deploy when on main
+              run: git push heroku main
