--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@material-tailwind/html": "^2.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
+    "purgecss": "^5.0.0",
     "tailwindcss": "^3.3.1"
   },
   "scripts": {
